# sistema-bancario

./: mkdocs.yml  pyproject.toml
docs/: index.md
sistema_bancario/: main.py
